--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   <body>
 
     <!-- SCRIVERE IL CODICE DA QUI IN POI-->
-    <h1>Hello, world!</h1>
+    <h1>Ticket Price</h1>
 
-    <p class="bg-yellow">Background color</p>
+    <p>Background color</p>
 
     <script src="./js/main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
